@@ -1,6 +1,6 @@
 .onAttach <- function(...) {
   mylib <- dirname(system.file(package = "mi"))
-  ver <- packageDescription("mi", lib = mylib)$Version
+  ver <- packageDescription("mi", lib.loc = mylib)$Version
   builddate <- packageDescription("mi", lib.loc = mylib)$Date
   cat(paste("\nmi (Version ", ver, ", built: ", builddate, ")\n", sep = ""))
   if(!any(search()=="package:abind"))
